templates/k3d-gitlab/cluster-types/mgmt/components/production/metaphor/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metaphor-production-ingress
  namespace: production
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`metaphor-production.<DOMAIN_NAME>`)
      services:
        - name: metaphor-production
          port: 80
  tls:
    secretName: metaphor-production-tls
